--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,23 +2,35 @@
 
 <html>
     <head>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <title>Mon premier blog</title>
     </head>
+
     <body>
-        <div>
-            <h1><a href="">Mon premier blog</a></h1>
+
+        <div class="page-header">
+            <h1><a href="/">Mon premier blog</a></h1>
         </div>
 
-{% for post in posts %}
-    <div>
-        <h2><a href="">{{ post.title }}</a></h1>
-        <p>published: {{ post.published_date }}</p>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </div>
-{% endfor %}
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    {% for post in posts %}
+                        <div class="post">
+                            <h2><a href="">{{ post.title }}</a></h1>
+                            <div class="date">
+                                <p>published: {{ post.published_date }}</p>
+                            </div>
+                            <p>{{ post.text|linebreaksbr }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+
 
     </body>
 </html>
