--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -4,10 +4,8 @@
     {% for post in posts %}
         <div class="post">
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <div class="date">
-                <p>published: {{ post.published_date }}</p>
-            </div>
-            <p>{{ post.text|linebreaksbr }}</p>
+            <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
+            <p>{{ post.text|truncatechars:200 }}</p>
         </div>
     {% endfor %}
 {% endblock %}
