--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -1,9 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h2>Nouvel article</h2>
+    <h2>Nouveau commentaire</h2>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Enregistrer</button>
+        <button type="submit" class="save btn btn-default">Envoyer</button>
     </form>
 {% endblock %}
