--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,8 +13,11 @@
     <body>
         <div class="page-header">
         {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></span></a>
             <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+            <p class="top-menu">Bonjour {{ user.username }} <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-lock"></span></a></p>
+        {% else %}
+            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
         {% endif %}
             <h1><a href="/">Mon premier blog</a></h1>
         </div>
@@ -30,3 +33,4 @@
     </body>
 
 </html>
+
