--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,13 +1,7 @@
 .page-header {
     background-color: #ABE697;
     margin-top: 0;
-    padding: 40px 20px 20px 60px;
-}
-
-.page-header p {
-    font-family: 'Open Sans Condensed', sans-serif;
-    color: #82C26D;
-    font-size: 26pt;
+    padding: 10px 10px 10px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -42,9 +36,10 @@ h2 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
+    font-family: 'Kalam', cursive;
     color: #ffffff;
     float: right;
-    font-size: 26pt;
+    font-size: 18pt;
     margin-right: 20px;
 }
 
@@ -53,7 +48,7 @@ h2 {
 }
 
 .post a {
-    color: #C2826E;
+    color: #82C26D;
     font-size: 10pt;
 }
 
@@ -75,8 +70,4 @@ h2 {
     text-align: justify;
     font-size: 10pt;
 }
-}
 
-.glyphicon {
-    color: #82C26D;
-}
