--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="//fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet" type="text/css">
-        <link href="//fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <title>Mon premier blog</title>
     </head>
@@ -16,11 +16,12 @@
         {% if user.is_authenticated %}
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></span></a>
             <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-            <p class="top-menu">Bonjour {{ user.username }} <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-lock"></span></a></p>
+            <p class="top-menu"> Bienvenue {{ user.username }} <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-lock"></span></a></p>
         {% else %}
             <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
         {% endif %}
-            <h1><a href="/">Mon premier blog</a></h1>
+            <h1><img src="{% static "image/Matou.png" %}"/><a href="/"> Mon premier blog </a></h1>
+
         </div>
 
         <div class="content container">
