--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,6 +32,9 @@
                 </div>
             </div>
         </div>
+        <div class="page-footer">
+            <p>J'espère que ce blog vous plait!</p>
+        </div>
     </body>
 
 </html>
