--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,18 +1,34 @@
 .page-header {
     background-color: #ABE697;
     margin-top: 0;
-    padding: 10px 10px 10px 40px;
+    padding: 5px 5px 5px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     font-family: 'Cabin Sketch', cursive;
     color: #ffffff;
-    font-size: 60pt;
+    font-size: 55pt;
     text-decoration: none;
+}
+
+.page-header img {
+    margin-right: 40pt
+}
+
+.top-menu, .top-menu:hover, .top-menu:visited {
+    font-family: 'Kalam', cursive;
+    color: #ffffff;
+    float: right;
+    font-size: 18pt;
+    margin-right: 30px;
 }
 
 .content {
     margin-left: 40px;
+    min-height: 72%;
+  /* Equal to height of footer */
+  /* But also accounting for potential margin-bottom of last child */
+    margin-bottom: -50px;
 }
 
 
@@ -33,14 +49,6 @@ h2 {
 
 .post-form textarea, .post-form input {
     width: 100%;
-}
-
-.top-menu, .top-menu:hover, .top-menu:visited {
-    font-family: 'Kalam', cursive;
-    color: #ffffff;
-    float: right;
-    font-size: 18pt;
-    margin-right: 20px;
 }
 
 .post {
@@ -71,17 +79,26 @@ h2 {
     font-size: 10pt;
 }
 
+.push {
+    height: 50px;
+}
+
 .page-footer {
     background-color: #ABE697;
-    margin-top: 0;
-    padding: 10px 10px 10px 40px;
+    margin-bottom: 0;
+    padding: 5px 5px 5px 40px;
+}
+
+.page-footer a {
+    color: #ffffff;
+    float: right;
+    margin-right: 40px;
 }
 
 .page-footer p {
     font-family: 'Kalam', cursive;
     color: #ffffff;
-    font-size: 12pt;
-    margin-left: 20pt;
+    font-size: 15pt;
+    margin-left: 10pt
 }
-
 
