--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,15 +13,10 @@
 
     <body>
         <div class="page-header">
-        {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></span></a>
-            <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-            <p class="top-menu"> Bienvenue {{ user.username }} <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-lock"></span></a></p>
-        {% else %}
-            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-        {% endif %}
-            <h1><img src="{% static "image/Matou.png" %}"/><a href="/"> Mon premier blog </a></h1>
-
+            {% if user.is_authenticated %}
+                <p class="top-menu"> Bienvenue {{ user.username }} !</p>
+            {% endif %}
+            <h1><img src="{% static "image/Matou.png" %}"/><a href="/">Mon premier blog</a></h1>
         </div>
 
         <div class="content container">
@@ -32,8 +27,16 @@
                 </div>
             </div>
         </div>
+        <div class="push"></div>
         <div class="page-footer">
-            <p>J'espère que ce blog vous plait!</p>
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-plus-sign"></span></a>
+                <a href="{% url 'post_draft_list' %}"><span class="glyphicon glyphicon-edit"></span></a>
+                <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-lock"></span></a>
+            {% else %}
+                <a href="{% url 'login' %}"><span class="glyphicon glyphicon-lock"></span></a>
+            {% endif %}
+            <p> Merci de votre visite ! </p>
         </div>
     </body>
 
