modification  css et html base pour rectifier la position du footer

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,12 @@
+htlm, body{
+    height: 100%;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+}
+
 .page-header {
     background-color: #ABE697;
     margin-top: 0;
@@ -24,11 +33,8 @@
 }
 
 .content {
+    flex: 1 0 auto;
     margin-left: 40px;
-    min-height: 100%;
-  /* Equal to height of footer */
-  /* But also accounting for potential margin-bottom of last child */
-    margin-bottom: -50px;
 }
 
 
@@ -79,13 +85,9 @@ h2 {
     font-size: 10pt;
 }
 
-.push {
-    height: 50px;
-}
-
 .page-footer {
     background-color: #ABE697;
-    margin-bottom: 0;
+    margin-top: 0;
     padding: 5px 5px 5px 40px;
 }
 
@@ -99,6 +101,6 @@ h2 {
     font-family: 'Kalam', cursive;
     color: #ffffff;
     font-size: 15pt;
-    margin-left: 10pt
+    margin-left: 40px;
 }
 
