--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,11 @@
                 <p>published: {{ post.published_date }}</p>
             </div>
             <a href="{% url 'post_detail' pk=post.pk %}">Commentaires : {{ post.approved_comments.count }}</a>
+            <div>
+            {% if user.is_authenticated %}
+            <a href="{% url 'post_detail' pk=post.pk %}">Total : {{ post.comments.count }}</a>
+            {% endif %}
+            </div>
         </div>
     {% endfor %}
 {% endblock %}
