--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,6 @@
 htlm, body{
     height: 100%;
+    width: 100%;
 }
 
 body{
@@ -8,8 +9,10 @@ body{
 }
 
 .page-header {
+    flex-shrink: 0;
     background-color: #ABE697;
     margin-top: 0;
+    margin-bottom: 0;
     padding: 5px 5px 5px 40px;
 }
 
@@ -33,7 +36,9 @@ body{
 }
 
 .content {
-    flex: 1 0 auto;
+    flex-grow: 1;
+    overflow: auto;
+    min-height: 2em;
     margin-left: 40px;
 }
 
@@ -59,6 +64,7 @@ h2 {
 
 .post {
     margin-bottom: 70px;
+    width: 100%;
 }
 
 .post a {
@@ -74,6 +80,7 @@ h2 {
 
 .post p {
     text-align: justify;
+
 }
 
 .comment {
@@ -86,9 +93,10 @@ h2 {
 }
 
 .page-footer {
+    flex-shrink: 0;
     background-color: #ABE697;
     margin-top: 0;
-    padding: 10px 10px 10px 50px;
+    padding: 5px 5px 5px 50px;
 }
 
 .page-footer a {
@@ -101,5 +109,6 @@ h2 {
     font-family: 'Kalam', cursive;
     color: #ffffff;
     font-size: 15pt;
+    margin-bottom: 5px;
 }
 
