legeres modifs dans le visuel et changement de photo entete

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,7 +16,7 @@
             {% if user.is_authenticated %}
                 <p class="top-menu"> Bienvenue {{ user.username }} !</p>
             {% endif %}
-            <h1><img src="{% static "image/Matou.png" %}"/><a href="/">Mon premier blog</a></h1>
+            <h1><img src="{% static "image/Matou2.png" %}"/><a href="/">Mon premier blog</a></h1>
         </div>
 
         <div class="content container">
