--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -13,7 +13,7 @@ body{
     background-color: #ABE697;
     margin-top: 0;
     margin-bottom: 0;
-    padding: 5px 5px 5px 40px;
+    padding: 5px 5px 5px 20px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -24,14 +24,14 @@ body{
 }
 
 .page-header img {
-    margin-right: 40pt
+    margin-right: 3pt
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
     font-family: 'Kalam', cursive;
     color: #ffffff;
     float: right;
-    font-size: 18pt;
+    font-size: 14pt;
     margin-right: 30px;
 }
 
@@ -39,7 +39,7 @@ body{
     flex-grow: 1;
     overflow: auto;
     min-height: 2em;
-    margin-left: 40px;
+    margin-left: 130px;
 }
 
 h2 {
@@ -48,14 +48,14 @@ h2 {
     font-size: 22pt;    
 }
 
+h3 {
+    color: #82C26D;
+    font-size: 12pt;
+}
+
 .post h2, .post h2 a, .post h2 a:visited {
     color: #82C26D;
     font-size: 23pt;
-}
-
-.post h3 {
-    color: #82C26D;
-    font-size: 12pt;
 }
 
 .date {
@@ -72,7 +72,7 @@ h2 {
 }
 
 .post {
-    margin-bottom: 15px;
+    margin-bottom: 40px;
     width: 100%;
 }
 
