--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,7 +7,7 @@
         <link href="//fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <title>Mon premier blog</title>
+        <title>Mon premier siteweb</title>
     </head>
 
 
@@ -16,26 +16,24 @@
             {% if user.is_authenticated %}
                 <p class="top-menu"> Bienvenue {{ user.username }} !</p>
             {% endif %}
-            <h1><img src="{% static "image/Matou2.png" %}"/><a href="/">Mon premier blog</a></h1>
+            <h1><img src="{% static "image/Matou2.png" %}"/><a href="/">Mon premier siteweb</a></h1>
         </div>
 
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
                 {% block content %}
                 {% endblock %}
-                </div>
             </div>
         </div>
 
 
         <div class="page-footer">
             {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-plus-sign"></span></a>
+                <a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-plus"></span></a>
                 <a href="{% url 'post_draft_list' %}"><span class="glyphicon glyphicon-edit"></span></a>
-                <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-lock"></span></a>
+                <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span></a>
             {% else %}
-                <a href="{% url 'login' %}"><span class="glyphicon glyphicon-lock"></span></a>
+                <a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span></a>
             {% endif %}
             <p> Merci de votre visite ! </p>
         </div>
