--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,62 +1,135 @@
-htlm, body{
+htlm, body {
     height: 100%;
-    width: 100%;
 }
 
-body{
+body {
     display: flex;
     flex-direction: column;
+    margin: 0;
+    padding: 0;
 }
 
-.page-header {
-    flex-shrink: 0;
-    background-color: #ABE697;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 5px 5px 0px 70px;
+.navbar {
+    background: rgba(44, 39, 12, .8);
 }
 
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    font-family: 'Cabin Sketch', cursive;
-    color: #ffffff;
-    font-size: 55pt;
-    text-decoration: none;
-}
-
-.page-header img {
-    margin-right: 3pt
-}
-
-.top-menu, .top-menu:hover, .top-menu:visited {
-    font-family: 'Kalam', cursive;
-    color: #ffffff;
-    float: right;
+.navbar-brand {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    text-align: center;
+    margin: auto;
+    font-family: 'Abel', sans-serif;
     font-size: 14pt;
-    margin-right: 30px;
-    margin-top: 0px;
+    color: white;
 }
 
-.content {
-    flex-grow: 1;
-    overflow: auto;
-    min-height: 2em;
+.navbar .navbar-nav > li > a {
+    color: white;
+}
+
+.navbar .navbar-nav > li > a:hover{
+    color: yellow;
+    background-color: transparent;
+}
+
+.navbar .navbar-nav > li > p {
+    color: white;
+}
+
+.homepage-header {
+    flex: 0;
     margin-top: 0px;
+    position: top;
+    width: 100%;
+    padding: 345px 0px 185px 0px;
+    background-image: url("/static/image/tronc.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+}
+
+.blog-header {
+    flex: 0;
+    margin-top: 0px;
+    position: top;
+    width: 100%;
+    padding: 90px 0px 10px 0px;
+    background-image: url("/static/image/vague.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+}
+
+.profil-header {
+    flex: 0;
+    margin-top: 0px;
+    position: top;
+    width: 100%;
+    padding: 70px 0px 20px 0px;
+    background-image: url("/static/image/sky.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+}
+
+.autre-header {
+    flex: 0;
+    margin-top: 0px;
+    position: top;
+    width: 100%;
+    padding: 70px 0px 20px 80px;
+}
+
+h1 {
+    font-family: 'Abel', sans-serif;
+    font-size: 40pt;
+    color: white;
+    width: 100%;
+    text-align: center;
 }
 
 h2 {
-    font-family: 'Cabin Sketch', cursive;
-    color: #82C26D;
-    font-size: 22pt;    
+    margin-left: 70px;
+    font-family: 'Abel', sans-serif;
+    font-size: 30pt;
+    color: white;
+}
+
+
+.content {
+    flex: 1 0 auto;
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.content p {
+    text-align: justify;
 }
 
 h3 {
-    color: #82C26D;
-    font-size: 12pt;
+    font-family: 'Abel', sans-serif;
+    color: #403F21;
+    font-size: 24pt;   
 }
 
-.post h2, .post h2 a, .post h2 a:visited {
-    color: #82C26D;
-    font-size: 23pt;
+h4 {
+    font-family: 'Abel', sans-serif;
+    color: #403F21;
+    font-size: 20pt; 
+}
+
+.post h3, .post h3 a, .post h3 a:visited {
+    color: #403F21;
+    font-size: 24pt;
+}
+
+h5 {
+    font-family: 'Abel', sans-serif;
+    color: #403F21;
+    font-size: 14pt;
 }
 
 .date {
@@ -72,22 +145,36 @@ h3 {
     width: 100%;
 }
 
-.post {
-    margin-bottom: 40px;
-    width: 100%;
+.post a {
+    color: #8A8125;
+    font-size: 10pt;
 }
 
-.post a {
-    color: #82C26D;
-    font-size: 10pt;
+.post img {
+    margin-top: 20px;
 }
 
 .post p {
     text-align: justify;
+    margin-top: 10px;
 }
 
 .comment {
-    margin: 20px 0px 20px 40px;
+    background: #eeede2;
+    padding: 10px 10px 10px 50px;
+    border: 1px solid #d0ccae;
+    border-radius: 4px;
+    margin: 10px 80px 10px 80px;
+    position: relative
+}
+
+.comment::before {
+    position: absolute;
+    left: 10px;
+    top: -10px;
+    content: "“";
+    font-size: 80px;
+    color: #d0ccae;
 }
 
 .comment p {
@@ -96,22 +183,16 @@ h3 {
 }
 
 .page-footer {
-    flex-shrink: 0;
-    background-color: #ABE697;
-    margin-top: 0;
-    padding: 5px 5px 5px 50px;
-}
-
-.page-footer a {
-    color: #ffffff;
-    float: right;
-    margin-right: 30px;
+    background: rgba(44, 39, 12, .8);
+    padding: 10px 10px 10px 10px;
+    margin-top: 20px;
 }
 
 .page-footer p {
-    font-family: 'Kalam', cursive;
-    color: #ffffff;
+    font-family: 'Abel', sans-serif;
+    color: white;
     font-size: 12pt;
     margin-bottom: 5px;
+    margin-left: 70px;
 }
 
