--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,37 +4,51 @@
     <head>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href="//fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet"> 
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <title>Mon premier siteweb</title>
+        <title>Mon premier site</title>
     </head>
 
 
     <body>
-        <div class="page-header">
-            {% if user.is_authenticated %}
-                <p class="top-menu"> Bienvenue {{ user.username }} !</p>
-            {% endif %}
-            <h1><img src="{% static "image/Matou2.png" %}"/><a href="/">Mon premier siteweb</a></h1>
+        <nav class="navbar navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <p class="navbar-brand">Mon premier site</p>
+                </div>
+
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="{% url 'homepage' %}"><span class="glyphicon glyphicon-home"></span></a></li>
+                        <li><a href="{% url 'mon_profil' %}">Mon profil</a></li>
+                        <li><a href="{% url 'post_list' %}">Le blog</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                        <li><p class="navbar-text">Bienvenue {{ user.username }} !</p></li>
+                        <li><a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-plus"></span></a></li>
+                        <li><a href="{% url 'post_draft_list' %}"><span class="glyphicon glyphicon-edit"></span></a></li>
+                        <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span></a></li>
+                   {% else %}
+                        <li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span></a></li>
+                   {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div>
+                {% block header %}
+                {% endblock %}
         </div>
 
         <div class="content container">
-            <div class="row">
                 {% block content %}
                 {% endblock %}
-            </div>
         </div>
 
 
         <div class="page-footer">
-            {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-plus"></span></a>
-                <a href="{% url 'post_draft_list' %}"><span class="glyphicon glyphicon-edit"></span></a>
-                <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span></a>
-            {% else %}
-                <a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span></a>
-            {% endif %}
             <p> Merci de votre visite ! </p>
         </div>
     </body>
