--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,8 +1,13 @@
 {% extends 'blog/base.html' %}
 
+{% block header %}
+<div class="autre-header">
+    <h3>{{ post.title }}</h3>
+</div>
+{% endblock %}
+
 {% block content %}
     <div class="post">
-        <h2>{{ post.title }}</h2>
         {% if post.published_date %}
             <div class="date">
             {{ post.published_date }}
@@ -21,21 +26,21 @@
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
     <hr>
-    <h3><strong>Commentaires</strong></h3>
+    <h5>Commentaires</h5>
     <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Ajouter un commentaire</a>
 
     {% for comment in post.comments.all %}
         {% if user.is_authenticated or comment.approved_comment %}
         <div class="comment">
-            <span class="glyphicon glyphicon-comment" aria-hidden="true"></span> <strong>{{ comment.author }}</strong>
+            <strong>{{ comment.author }}</strong>
             <div class="date">
                 {{ comment.created_date }}
                 {% if not comment.approved_comment %}
-                    <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
-                    <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+                <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+                <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
                 {% endif %}
             </div>
-            <p>{{ comment.text|linebreaks }}</p>
+            <p>{{ comment.text }}</p>
         </div>
         {% endif %}
         {% empty %}
