--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -1,10 +1,16 @@
 {% extends 'blog/base.html' %}
 
+{% block header %}
+<div class="blog-header">
+    <h2>Articles non-publiés<br/>À corriger.</h2>
+</div>
+{% endblock %}
+
 {% block content %}
     {% for post in posts %}
         <div class="post">
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
+            <h3><a href="{% url 'post_detail' pk=post.pk %}"># {{ post.title }}</a></h3>
+            <p class="date">rédigé le : {{ post.created_date|date:'d-m-Y' }}</p>
             <p>{{ post.text|truncatechars:200 }}</p>
         </div>
     {% endfor %}
