--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,7 +1,12 @@
 {% extends 'blog/base.html' %}
 
+{% block header %}
+<div class="autre-header">
+    <h4>Nouvel article</h4>
+</div>
+{% endblock %}
+
 {% block content %}
-    <h2>Nouvel article</h2>
     <form method="POST" class="post-form" enctype="multipart/form-data">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Enregistrer</button>
