--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,8 +1,13 @@
 {% extends "blog/base.html" %}
 
+{% block header %}
+        <img src="/static/image/ile.jpg" class= "img-responsive"/>
+{% endblock %}
+
 {% block content %}
+    <h3>Entrez votre nom d'utilisateur et votre mot de passe</h3>
     {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
+        <p>Nom d'utilisateur ou/et mot de passe incorrect(s).</p>
     {% endif %}
 
     <form method="post" action="{% url 'login' %}">
